
export type EntidadFinanciera = "VISA" | "MASTERCARD"